                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 27-02-2006 fixed: threading problem with smb directory
 - 27-02-2006 fixed: threading problem with opening/closing of files from dll's
 - 27-02-2006 fixed: exception in music scanner when canceling before the filecount is calculated
 - 26-02-2006 updated: German language file
 - 26-02-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 26-02-2006 updated: Swedish language file (Thnx to blittan)
 - 26-02-2006 updated: Norwegian language file (Thnx to vnm)
 - 26-02-2006 updated: Italian language file (Thnx to kotix)
 - 26-02-2006 fixed: thumbs in video and music playlist may not be displayed (Second try)
 - 26-02-2006 fixed: trainer overlay had a potentially big speed impact.
 - 26-02-2006 fixed: songs may not be submitted to last.fm
 - 26-02-2006 fixed: thumbs in video and music playlist may not be displayed
 - 26-02-2006 changed: media window base class, unified window init
 - 26-02-2006 added: unrolling of single file archives. this moves archive support into filedirectoryfactory. WARNING TO TRANSLATORS: CHANGES MEANING OF STRING 516
 - 26-02-2006 changed: updated rar libs to latest version (3.5.4) (also removed guilib dependencies)
 - 26-02-2006 added: overlay to indicate that a movie is unwatched in database views (overlayunwatched.png).
 - 26-02-2006 fixed: xbmsp:// -> xbms:// in the network source dialog.
 - 26-02-2006 fixed: Default interlaced and output to all speakers settings weren't saved.
 - 26-02-2006 fixed: Buttonscroller shadow and text colours didn't allow alpha values.